[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["ewbdoohyun <ewb.doohyun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.8"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
